# TeleDownloadr

./: .gitignore  All_finance_course_-1001671277575.txt  CLAUDE.md  Paid_Group_-1001955847750.txt  build_app.py  paid.txt  pyproject.toml  requirements.txt  test_cancellation.py  test_download.py  test_download_all.py  test_phase4_smart_resume.py  test_phase5_dynamic_search.py  test_questionary_features.py  test_robust_download.py  test_save_metadata.py  test_scan_preview.py  test_search_fix.py  test_search_working.py  test_speed.py
docs/archive/: DOWNLOAD_ALL_IMPLEMENTATION.md  GRACEFUL_SHUTDOWN_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PHASE_3_SUMMARY.md  PHASE_4_5_SUMMARY.md  SEARCH_FINAL.md  SEARCH_FIX.md  SEARCH_SOLUTION.md
teledownloadr/: __init__.py  __main__.py
teledownloadr/config/: settings.py
teledownloadr/core/: client.py  downloader.py  metadata.py
teledownloadr/utils/: display.py
