[tool.poetry]
name = "teledownloadr"
version = "0.1.0"
description = "A robust Telegram media downloader."
authors = ["Gajender Sharma <gajender@example.com>"]
readme = "README.md"
packages = [{include = "teledownloadr"}]

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
rich = "^13.7.0"
questionary = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
teledownloadr = "teledownloadr.__main__:main"
